welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
			c = true
                          ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
		else { c = false }
                         ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (!estFaceMur) { 
        ^