welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var c:Boolean = false
	if (!estFaceMur) { 
		avance() 
		if (getCouleurSol() == Color.green) {
			c = true
		}
		else { c = false }
	}
}        
